--- a/web-app/input.css
+++ b/web-app/input.css
@@ -1,11 +1,50 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@plugin "daisyui";
+@plugin "daisyui/theme" {
+    name: "sharesphere_dark";
+    default: true;
+    prefersdark: true;
+    color-scheme: "dark";
+    --color-base-100: oklch(29.51% 0.0532 238.32);
+    --color-base-200: oklch(20.00% 0.0532 238.32);
+    --color-base-300: oklch(15.00% 0.0532 238.32);
+    --color-base-content: oklch(97.807% 0.029 256.847);
+    --color-primary: oklch(66.31% 0.1509 239.62);
+    --color-primary-content: oklch(100% 0 0);
+    --color-secondary: oklch(52.73% 0.1371 150.07);
+    --color-secondary-content: oklch(94% 0.028 342.258);
+    --color-accent: oklch(77% 0.152 181.912);
+    --color-accent-content: oklch(38% 0.063 188.416);
+    --color-neutral: oklch(0% 0 0);
+    --color-neutral-content: oklch(92% 0.004 286.32);
+    --color-info: oklch(75.69% 0.1267 254.91);
+    --color-info-content: oklch(29% 0.066 243.157);
+    --color-success: oklch(72.27% 0.192 149.58);
+    --color-success-content: oklch(37% 0.077 168.94);
+    --color-warning: oklch(82% 0.189 84.429);
+    --color-warning-content: oklch(41% 0.112 45.904);
+    --color-error: oklch(57.58% 0.2165 27.47);
+    --color-error-content: oklch(27% 0.105 12.094);
+    --radius-selector: 0.25rem;
+    --radius-field: 0.25rem;
+    --radius-box: 0.25rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.3125rem;
+    --border: 1px;
+    --depth: 0;
+    --noise: 0;
+}
+
+@theme {
+    --spacing-124: 31rem;
+    --spacing-128: 32rem;
+    --spacing-160: 40rem;
+}
 
 /* Don't make button's text uppercase, change default rounding */
 .btn {
     text-transform: none;
-    @apply rounded-sm;
+    @apply rounded-xs;
 }
 
 .btn-circle {
@@ -13,15 +52,15 @@
 }
 
 .input {
-    @apply rounded-sm;
+    @apply rounded-xs;
 }
 
 .select {
-    @apply rounded-sm;
+    @apply rounded-xs;
 }
 
 .checkbox {
-    @apply rounded-sm;
+    @apply rounded-xs;
 }
 
 /* class to remove spinner from number inputs */
